# CacaoEngine

./: .clang-format  .clang-format-ignore  .clangd  .gitattributes  .gitignore  .gitmodules  BACKENDS.md  BACKENDS.txt  BUILD.md  CONTRIBUTING.md  Makefile  README.md  VISUALSTUDIO.md  as_glsl.xjs  as_spv.xjs  default_native.ini  index.html  meson.build  meson.options  meson_options.txt  native.ini  setupEnvironment.sh  setup_posix.sh  setup_windows.ps1  shader.frag  shader.vert  some_shader.slang
OLD_CODE/: README.txt  meson.build
OLD_CODE/backends/common/: UIShaderGen.cpp  UIViewShaderManager.hpp
OLD_CODE/backends/opengl/: meson.build
OLD_CODE/backends/vulkan/: meson.build
OLD_CODE/cacao/: meson.build
OLD_CODE/cacao/include/: Cacao.hpp
OLD_CODE/cacao/shaders/: image.frag  image.vert  skybox.frag
OLD_CODE/playground/: launchconfig.cacao.yml
backends/gl-al-glfw/: INFO.md  meson.build
backends/gl-al-glfw/include/: ALPlayerData.hpp  ALSoundData.hpp  AudioObjectHolder.hpp  GLSkyboxData.hpp
backends/gl-al-glfw/src/: Audio.cpp  AudioPlayer.cpp  ExceptionCodes.cpp  OpenGL.cpp  Skybox.cpp  Sound.cpp  Window.cpp
backends/gl-glfw/: INFO.md  meson.build
backends/gl-glfw/src/: GLFWHooks.cpp  GLHooks.cpp  OpenGL.cpp  Shader.cpp  Window.cpp
backends/gl-sdl/: INFO.md  meson.build
backends/gl-sdl/include/: GLTexture2DData.hpp  KeyAndMouseLUT.hpp  SDLWindowData.hpp
backends/gl-sdl/src/: Cubemap.cpp  ExceptionCodes.cpp  GLHooks.cpp  Mesh.cpp  OpenGL.cpp  SDLHooks.cpp  Skybox.cpp  Window.cpp
backends/gles-al-glfw/: INFO.md  meson.build
backends/gles-al-glfw/include/: ESShaderData.hpp  ESTexture2DData.hpp
backends/gles-al-glfw/src/: AudioPlayer.cpp  Shader.cpp  Skybox.cpp  Sound.cpp  Window.cpp
backends/vk-glfw/: INFO.md  meson.build
backends/vk-glfw/src/: GLFWHooks.cpp  VkHooks.cpp
backends/vk-sdl/: INFO.md  meson.build
backends/vk-sdl/src/: SDLHooks.cpp  VkHooks.cpp
backends/vulkan/: meson.build
backends/vulkan/include/: UIDrawUBO.hpp  VulkanCoreObjects.hpp
backends/vulkan/sdl_flags/: meson.build
cacao/: Makefile  build.ninja  expf.c  meson.build
cacao/include/: Cacao.hpp
cacao/include/3D/: Mesh.hpp  Model.hpp  Orientation.hpp  Skybox.hpp  Transform.hpp  Vertex.hpp
cacao/include/Audio/: AudioController.hpp  AudioPlayer.hpp  AudioSystem.hpp  Sound.hpp
cacao/include/Control/: DynTickController.hpp
cacao/include/Core/: Assert.hpp  DynTickController.hpp  Engine.hpp  EngineConfig.hpp  Exception.hpp  Log.hpp
cacao/include/Events/: Event.hpp  EventConsumer.hpp  EventManager.hpp
cacao/include/Graphics/: Material.hpp  Shader.hpp  Window.hpp
cacao/include/Scripts/: Script.hpp
cacao/include/UI/: Font.hpp  FreetypeOwner.hpp  Image.hpp  Screen.hpp  Shaders.hpp  Text.hpp  UIElement.hpp  UIRenderable.hpp  UIView.hpp
cacao/include/Utilities/: Asset.hpp  AssetManager.hpp  Flushable.hpp  Input.hpp  MiscUtils.hpp  MultiFuture.hpp  Task.hpp  Tree.hpp
cacao/include/World/: Component.hpp  Entity.hpp  World.hpp  WorldManager.hpp
cacao/shaders/: image.frag  image.vert  skybox.frag  skybox.vert  text.frag  text.vert  uiquad.frag  uiquad.vert
cacao/src/: expf.c
cacao/src/3D/: Model.cpp  Transform.cpp
cacao/src/Audio/: AudioController.cpp  AudioPlayer.cpp  AudioSystem.cpp  Sound.cpp
cacao/src/Cameras/: PerspectiveCamera.cpp
cacao/src/Control/: DynTickController.cpp
cacao/src/Core/: Assert.cpp  DynTickController.cpp  Engine.cpp  Log.cpp  Startup.cpp
cacao/src/Events/: EventManager.cpp
cacao/src/Rendering/: RenderController.cpp
cacao/src/UI/: Font.cpp  FreetypeOwner.cpp  Renderables.cpp  Screen.cpp  UIView.cpp
cacao/src/Utilities/: AssetManager.cpp  Input.cpp
cacao/src/World/: WorldManager.cpp
engine/: README.md  README.txt  meson.build
engine/OLD_INCLUDE/3D/: Mesh.hpp  Transform.hpp  Vertex.hpp
engine/OLD_INCLUDE/Assets/: AssetLoader.hpp  AssetManager.hpp
engine/OLD_INCLUDE/Audio/: AudioSystem.hpp  Sound.hpp
engine/OLD_INCLUDE/Core/: Assert.hpp  DynTickController.hpp  Engine.hpp  Exception.hpp
engine/OLD_INCLUDE/Events/: EventManager.hpp
engine/OLD_INCLUDE/Graphics/: Material.hpp  Shader.hpp
engine/OLD_INCLUDE/Scripts/: Script.hpp
engine/OLD_INCLUDE/UI/: Font.hpp  Screen.hpp  Text.hpp
engine/OLD_INCLUDE/Utilities/: Input.hpp
engine/OLD_INCLUDE/World/: Component.hpp  Entity.hpp  World.hpp  WorldManager.hpp
engine/exe/: main.cpp  meson.build
engine/include/3D/: Model.hpp  Skybox.hpp
engine/include/Assets/: Asset.hpp  AssetManager.hpp
engine/include/Audio/: AudioPlayer.hpp
engine/include/Cacao/: Actor.hpp  Asset.hpp  AudioManager.hpp  BlobResource.hpp  Camera.hpp  CodeRegistry.hpp  Component.hpp  ComponentExporter.hpp  Cubemap.hpp  Engine.hpp  Entity.hpp  Event.hpp  EventConsumer.hpp  EventManager.hpp  Exceptions.hpp  Flushable.hpp  FrameProcessor.hpp  GPU.hpp  Identity.hpp  Input.hpp  Log.hpp  Mesh.hpp  Model.hpp  MultiFuture.hpp  OverlayStack.hpp  PAL.hpp  PerspectiveCamera.hpp  Resource.hpp  ResourceManager.hpp  Script.hpp  Shader.hpp  Sound.hpp  Tex2D.hpp  Time.hpp  (+6 more)
engine/modules/: README.txt
libs/audiodecoder/: README.md  meson.build
libs/formats/: README.md  meson.build
libs/image/: LUTGen.cpp  README.md  meson.build
libs/libcacaoformats/: README.md  meson.build
playground/: buildandrun.py  bundle.py  launchconfig.cacao.yml  meson.build
playground/src/: Playground.cpp
sandbox/: cacaospec.yml.in  meson.build
sandbox/src/: sandbox.cpp
src/: meson.build
src/core/: AssetManager.cpp  AudioSystem.cpp  CommonAssetLoader.cpp  Engine.cpp  Font.cpp  Log.cpp  Renderables.cpp  Sound.cpp  Startup.cpp  Texture2D.cpp
src/shaders/: text.frag  text.vert
tools/cubetool/: README.md  commands.hpp  create.cpp  extract.cpp  main.cpp  meson.build
tools/shaderc/: README.md  cacaoshaderbase.slang  compiler.cpp  compiler.hpp  example_shader.slang  includable.py  logutil.hpp  main.cpp  meson.build  outform.hpp  xjs_extractor.cpp
tools/worldc/: README.md  main.cpp  meson.build
tools/xak/: README.md  commands.hpp  create.cpp  delete.cpp  extract.cpp  list.cpp  main.cpp  merge.cpp  meson.build
(+2871 files in other folders)
