option('build_playground', type: 'boolean', value: true, description: 'Whether or not to build the playground application.')
option('use_backend', type: 'combo', value: '__DEFAULT__', description: 'The backend to use. Must be specified.', choices: ['__DEFAULT__', 'opengl', 'vulkan'])
option('windows_noconsole', type: 'boolean', value: false, description: '(Windows only) Whether to hide the console window created by default.')
option('exe_name', type: 'string', value: 'cacaoengine', description: 'The name of the Cacao Engine executable. Useful for games that want to customize the executable.')