option('graphics_backend', type: 'combo', value: 'opengl', description: 'The backend to use for graphics.', choices: ['opengl', 'vulkan'])
option('build_engine', type: 'boolean', value: true, description: 'Whether to build the engine.')
option('build_libs', type: 'boolean', value: true, description: 'Whether to build the supporting libraries.')
option('build_playground', type: 'boolean', value: false, description: 'Whether to build the playground demo app.')
option('build_tools', type: 'boolean', value: false, description: 'Whether to build the auxiliary tools for engine game development.')
option('formats_mode', type: 'combo', value: 'packed', description: 'Supported format types in the Cacao Engine formats library', choices: ['packed', 'unpacked', 'both'])
option('windows_noconsole', type: 'boolean', value: false, description: '(Windows only) Whether to hide the console window created by default.')
option('exe_name', type: 'string', value: 'cacaoengine', description: 'The name of the engine executable. Useful for games that want to have their name be the executable name.')
option('ignore_bad_compiler', type: 'boolean', value: false, description: 'Whether to ignore the fact that the chosen compiler/linker is unsupported and continue anyways.')